--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -5,3 +5,8 @@ set(SOURCES UnicodeFileToHtmlTextConverter.cpp HtmlConverter.cpp string_escape_u
 add_library(${SRC_LIB_NAME} ${SOURCES})
 target_sources(${SRC_LIB_NAME} PRIVATE ${SOURCES})
 target_include_directories(${SRC_LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+add_executable(PrintFileContents main.cpp)
+
+# Link the 'src' library with the executable
+target_link_libraries(PrintFileContents ${SRC_LIB_NAME})
