sample solution for C#

--- a/CSharp/HtmlConverter-Kata.Tests/HtmlConverter-Kata.Tests.csproj
+++ b/CSharp/HtmlConverter-Kata.Tests/HtmlConverter-Kata.Tests.csproj
@@ -22,4 +22,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\HtmlConverter-Kata\HtmlConverter-Kata.csproj" />
+    </ItemGroup>
+
 </Project>
